<resources>
    <string name="app_name">Steganography</string>
    <string name="loading">loading</string>

    <string name="facebook_app_id">541066283550590</string>
    <string name="fb_login_protocol_scheme">fb541066283550590</string>
    <string name="encode_decode"><![CDATA[Encode & Decode]]></string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="encode_text_in_image">Encode text in Image</string>
    <string name="upload_image">Upload image</string>
    <string name="decode_text_in_image">Decode text in Image</string>
    <string name="decode">Decode</string>
    <string name="encode_hint">Type your text to encode ...</string>
    <string name="cover_image">cover image</string>


</resources>
