<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.steganography.textInImage.encode.EncodeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="100"
            tools:context=".textInImage.encode.EncodeTextActivity">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="15"
                android:theme="@style/AppTheme.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay">

                    <TextView
                        android:id="@+id/toolbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/encode_text_in_image"
                        android:textColor="@color/text_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.Toolbar>


            </com.google.android.material.appbar.AppBarLayout>

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="75dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="40"
                android:adjustViewBounds="true"
                android:background="@drawable/selected_image_background"
                android:scaleType="fitXY"
                android:src="@{vm.imageUrl}"


                />


            <Button
                android:id="@+id/get_image_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="10"
                android:background="@drawable/upload_image_background"
                android:onClick="@{()->vm.goToGallery()}"
                android:padding="5dp"
                android:text="@string/upload_image"
                android:textColor="@color/text_color"
                android:textSize="20dp"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_weight="3"
                android:background="@drawable/text_encode_decode_background"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="15dp"
                    android:autoSizeMaxTextSize="40dp"
                    android:autoSizeMinTextSize="20dp"
                    android:background="@null"
                    android:ems="5"
                    android:hint="@string/encode_hint"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:singleLine="true"
                    android:text="@={vm.user_message}"
                    android:textColor="#0E0E0E"
                    android:textSize="15dp"
                    app:hintTextColor="#090909" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_weight="11"
                android:background="@drawable/text_encode_decode_background"
                android:focusable="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/background_bottom_color">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="15dp"
                    android:autoSizeMaxTextSize="40dp"
                    android:autoSizeMinTextSize="20dp"
                    android:background="@null"
                    android:ems="5"
                    android:hint="password"
                    android:inputType="textPassword"
                    android:maxLines="5"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:singleLine="true"
                    android:text="@={vm.message_password}"
                    android:textColor="#0E0E0E"
                    android:textSize="15dp"
                    app:hintTextColor="#090909" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="13"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="100"

                >

                <Button
                    android:id="@+id/encode_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="30"
                    android:background="@drawable/upload_image_background"
                    android:text="Encode"
                    android:textColor="@color/text_color"
                    android:textSize="20dp"
                    android:textAllCaps="false"
                    />

                <Button
                    android:id="@+id/share_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="30"
                    android:background="@drawable/upload_image_background"
                    android:drawableRight="@mipmap/shar_icon"
                    android:text="share"
                    android:textColor="@color/text_color"
                    android:textSize="20dp"

                    />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="30"
                    android:background="@drawable/upload_image_background"
                    android:text="save"
                    android:textColor="@color/text_color"
                    android:textSize="20dp"

                    />
            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>